--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
                 <em class="about-me-para">
                     <!--about me paragraph-->
                     
-                    While <span style="color:red;font-size:22px;" class="about-me-para kyle">Kyle</span> enjoys sleeping on the beach and focusing on his fitness, he can:
+                    While <span style="color:ghostwhite;;font-size:22px;" class="about-me-para kyle">Kyle</span> enjoys sleeping on the beach and focusing on his fitness, he can:
                 </em>
                 
                 <ol class="about-me-container">
@@ -118,7 +118,7 @@
                 <div class="divider"></div>
                 <em class="about-me-para">
                     <!--about me paragraph-->
-                   Get to know <span style="color:red;font-size:22px;" class="about-me-para kyle">Kyle</span>.
+                   Get to know <span style="color:ghostwhite;;font-size:22px;" class="about-me-para kyle">Kyle</span>.
                 </em>
             </div>
         </div>
