--- a/src/client/clone/index.html
+++ b/src/client/clone/index.html
@@ -13,6 +13,7 @@
         <div class="cal-container">
             <!--color choice-->
             <div id="exit-container">
+                <h4 class="calc-title">Calculator App</h4>
                 <span class="material-symbols-outlined exit-large">
                     cancel
                 </span>
