--- a/src/client/notes/public/index.html
+++ b/src/client/notes/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <!--notes text area-->
     <div id="textarea-container">
-        
+        <h4 class="notes-title">Notes App</h4>
         <div id="textarea-top">
             <ol class="textarea-list-container">
                 <!-- <li class="text-areaitem">
@@ -28,7 +28,7 @@
         
         <form class="textarea-form" action="/delete" method="POST" id="delete"></form>
         <form class="textarea-form" action="/notes" method="POST">
-            <textarea id="textarea" name="notes" cols="50" rows="3" wrap=physical></textarea>
+            <textarea id="textarea" name="notes" cols="40" rows="3" wrap=physical></textarea>
             <!-- autocapitalize="on" autocorrect="on" placeholder="Enter some notes" -->
             <div class="btn-container">
                 <input type="reset" value="Clear" class="clear">
