update component size

--- a/public/index.html
+++ b/public/index.html
@@ -61,11 +61,11 @@
     <div id="nav-container1" class="base">
         <!--components container-->
         <div id="components-container">
-            <div class="material-symbols-outlined calculator calc calc-icon icon-calc bye-calc">
+            <div class="material-symbols-outlined calculator calc calc-icon icon-calc calc-hidden bye-calc">
                 calculate
             </div>
 
-            <div class="material-symbols-outlined notepad notes notes-icon icon-notes bye-calc">
+            <div class="material-symbols-outlined notepad notes notes-icon icon-notes calc-hidden bye-calc">
                 add_notes
             </div>
             <!--include time-->
